fix alignment in home

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body,html{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
